# akashi-api

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  Dockerfile  Makefile  PROGRESS_REPORT.md  README.md  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  database.py  rate_limit.py  security.py
app/models/: __init__.py  api_key.py  asset.py  asset_storage.py  base.py  collection.py  keyword.py  marker.py  person.py  refresh_token.py  scene.py  tenant.py  transcription.py  user.py  workflow.py
app/schemas/: __init__.py  asset.py  auth.py  collection.py  common.py  keyword.py  marker.py  person.py  scene.py  search.py  transcription.py  upload.py  workflow.py
app/services/: __init__.py  asset_service.py  face_service.py  processing_service.py  search_service.py  storage_service.py  vision_service.py  whisper_service.py
app/workers/: __init__.py  celery_app.py
app/workers/tasks/: __init__.py  face_detection.py  ingest.py  maintenance.py  (+5 more)
docs/: DEVOPS_STRATEGY.md  GENERATION_PROMPTS.md
docs/database/: README.md  sprint-1-core.md  sprint-2-keywords-markers.md  sprint-3-auth.md  sprint-4-collections-search.md  sprint-5-security.md  sprint-9-ai-processing.md
infra/prometheus/: prometheus.yml
scripts/: db_monitor.py  folder_watcher.py  init-db.sql  run_worker.py  start_debug.bat  test_flow.py  test_full_workflow.py
scripts/migrations/: 001_add_users_table.sql  002_add_collections_and_search.sql  003_add_refresh_tokens.sql  004_add_ai_tables.sql
tests/: __init__.py  conftest.py  test_assets.py  test_auth.py  test_collections.py  test_health.py  test_keywords.py  test_markers.py  test_search.py
(+15 files in other folders)
